--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <div class="imput-container">
                 <form  id="login">
                     <div class="user-box">
-                        <input type="text" name="" required="" id="username">
+                        <input type="text" name="" required="" id="username" required>
                         <label>Username</label>
                         <span class="border"></span>
                     </div>
                     <div class="user-box">
-                        <input type="password" name="" required="" id="password">
+                        <input type="password" name="" required="" id="password" required>
                         <label>Password</label>
                         <span class="border"></span>
                     </div>
