--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             </div>
       </div>
       <div class="img-login">
-        <img    src="/asset/login.jpg" alt="" srcset="">
+        <img    src="asset/login.jpg" alt="" srcset="">
     </div>
             
         </div>
-<script src="/js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
